# bachelor-arbeit

./: .gitignore  Aufgabenstellung.docx  champs.json  game_data.npz  game_data_champs_only.npz  leaderboards.tex  leaderboards.txt  leaderboards_new.tex  links.txt  matchups.json  patches.json  players.json  pro_games.json  pro_games_ESLOL.json  pro_games_GLL.json  pro_games_HM.json  pro_games_LFL.json  pro_games_LFL2.json  pro_games_NLC.json  pro_games_TCL.json  pyproject.toml  stats_cos.csv  stats_my.csv  stats_my_cos.csv
all_games_champs_only/: leaderboard.csv  models.txt  result.txt
all_games_simple_v2/: leaderboard.csv
all_games_with_region/: models.txt  result.txt
classifier/all_games_champ_stats_only/: data.txt  game_data.npz  leaderboard.csv  leaderboard_randsplit.csv  models.txt  models_randsplit.txt  result.txt  result_randsplit.txt
classifier/all_games_champs_only/: data.txt  leaderboard.csv  (+11 more)
europe_games_full/: game_data.npz  leaderboard.csv  models.txt
europe_games_simple/: data.txt
flask/: app.py
lec_games_full/: leaderboard.csv  models.txt
scripts/: auto_learn.py  auto_learn_autoencode.py  auto_learn_pca.py  auto_regression.py  collect_results.py  datasetprep_util.py  feature_imoprtance.py  gen_graph.py  get_champions.py  get_data_stats.py  get_games.py  get_matchup_winrate.py  get_player.py  get_player_data.py  leaderboard_extract.py  learn_autoencoder.py  lstm.py  lstm_test.py  onlychmaps_dataset.py  prepare_dataset.py  prepare_matchup_dataset.py  prepare_only_pro_dataset.py  rerun_classifier.py  run_multiple.py  schemas.py  winrate.py
(+158 files in other folders)
