[tool.poetry]
name = "ba"
version = "0.1.0"
description = ""
authors = ["gregvoigts <gregor.voigts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
riotwatcher = "^3.2.4"
pydantic = "^1.10.7"
tinydb = "^4.7.1"
beautifulsoup4 = "^4.12.2"
fake-useragent = "^1.1.3"
unidecode = "^1.3.6"
numpy = "^1.24.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
